syntax = "proto3";
option go_package = "grpc-server/proto";
package digimon;

service DataNodeService {
  rpc StoreDigimon(DigimonInfo) returns (StoreDigimonResponse);

  rpc GetDigimonAttribute(DigimonRequest) returns (DigimonResponse);

  rpc Terminate(TerminateRequest) returns (TerminateResponse);
}

message DigimonInfo {
  int32 id = 1;
  string attribute = 2;
}

message StoreDigimonResponse {
  string message = 1;
}

message DigimonRequest {
  int32 id = 1;
}

message DigimonResponse {
  string attribute = 1;
}

message TerminateRequest {
  string message = 1;
}

message TerminateResponse {
  string message = 1;
}